# airinv

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  airinv-config.cmake.in  airinv.pc.in  airinv.spec  autogen.sh  autogen_autotools.sh  configure.ac  settings.py  urls.py
0.1.0/main/: Makefile.am  airinv.spec  configure.ac
0.1.0/main/airinv/: AIRINV_Types.hpp
0.1.0/main/airinv/batches/: Makefile.am
0.1.0/main/airinv/bom/: BookingClassStruct.hpp  BucketStruct.hpp  FlightDateStruct.hpp  LegCabinStruct.cpp  SegmentCabinHelper.cpp  SegmentCabinStruct.hpp
airinv/: AIRINV_Master_Service.hpp  AIRINV_Service.hpp  AIRINV_Types.hpp  CMakeLists.txt  Makefile.am  airinv.spec  configure.ac
airinv/airinv/: AIRINV_Service.hpp  AIRINV_Types.hpp  Makefile.am
airinv/airinv/basic/: BasChronometer.cpp  BasChronometer.hpp  BasParserTypes.hpp  FlightRequestStatus.cpp  FlightTypeCode.cpp  FlightTypeCode.hpp  Makefile.am  sources.mk
airinv/airinv/batches/: Makefile.am  airinv.cpp  readInventory.cpp  sources.mk
airinv/airinv/bom/: BookingClass.cpp  BookingClass.hpp  BookingClassStruct.cpp  BookingClassStruct.hpp  BucketStruct.cpp  FareFamilyStruct.hpp  FlightDate.cpp  FlightDate.hpp  FlightDateHelper.cpp  FlightDateHelper.hpp  FlightDateStruct.cpp  FlightDateStruct.hpp  FlightPeriodStruct.cpp  FlightPeriodStruct.hpp  Inventory.cpp  Inventory.hpp  InventoryHelper.cpp  InventoryHelper.hpp  InventoryStruct.cpp  InventoryStruct.hpp  LegCabin.cpp  LegCabin.hpp  LegCabinStruct.cpp  LegCabinStruct.hpp  LegDate.cpp  LegDate.hpp  LegStruct.cpp  LegStruct.hpp  Makefile.am  SegmentCabin.cpp  SegmentCabin.hpp  SegmentCabinHelper.hpp  SegmentCabinStruct.cpp  SegmentCabinStruct.hpp  SegmentDate.cpp  SegmentDate.hpp  SegmentStruct.cpp  SegmentStruct.hpp  sources.mk
airinv/airinv/command/: InventoryBuilder.cpp  InventoryBuilder.hpp  InventoryGenerator.cpp  InventoryGenerator.hpp  InventoryManager.cpp  InventoryManager.hpp  InventoryParser.cpp  InventoryParser.hpp  InventoryParserHelper.cpp  InventoryParserHelper.hpp  Makefile.am  ScheduleParserHelper.cpp  ScheduleParserHelper.hpp  sources.mk
airinv/airinv/config/: Makefile.am
airinv/airinv/core/: Makefile.am  sources.mk
airinv/airinv/factory/: FacAirinvServiceContext.cpp  FacAirinvServiceContext.hpp  FacSupervisor.cpp  FacSupervisor.hpp  sources.mk
airinv/airinv/server/: AirInvClient.cpp  AirInvServer.cpp  AirInvServer.hpp  Connection.cpp  Connection.hpp  Makefile.am  Reply.cpp  Reply.hpp  Request.hpp  RequestHandler.cpp  RequestHandler.hpp  connection.cpp  connection.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  sources.mk
airinv/airinv/service/: AIRINV_Master_Service.cpp  AIRINV_Master_ServiceContext.hpp  AIRINV_Service.cpp  AIRINV_ServiceContext.cpp  AIRINV_ServiceContext.hpp  Logger.cpp  Logger.hpp  Makefile.am  sources.mk
airinv/basic/: BasConst.cpp
airinv/batches/: airinv.cpp  airinv_parseInventory.cpp  parseInventory.cpp  readInventory.cpp
airinv/bom/: AirportList.hpp  BookingClassStruct.cpp  BookingClassStruct.hpp  BucketStruct.cpp  FFDisutilityStruct.cpp  FFDisutilityStruct.hpp  FRAT5Struct.cpp  FRAT5Struct.hpp  FareFamilyStruct.cpp  FareFamilyStruct.hpp  FlightDateHelper.cpp  FlightDateHelper.hpp  FlightPeriodStruct.hpp  InventoryHelper.cpp  InventoryHelper.hpp  LegCabinStruct.hpp  LegStruct.cpp  LegStruct.hpp  SegmentCabinHelper.cpp  SegmentCabinHelper.hpp  SegmentCabinStruct.cpp  SegmentCabinStruct.hpp  SegmentDateHelper.cpp  SegmentSnapshotTableHelper.cpp  SegmentSnapshotTableHelper.hpp  SegmentStruct.cpp  SegmentStruct.hpp
airinv/command/: FFDisutilityParser.cpp  FFDisutilityParser.hpp  FFDisutilityParserHelper.cpp  FFDisutilityParserHelper.hpp  FRAT5Parser.cpp  FRAT5Parser.hpp  FRAT5ParserHelper.cpp  FRAT5ParserHelper.hpp  InventoryBuilder.cpp  InventoryBuilder.hpp  InventoryGenerator.cpp  InventoryGenerator.hpp  InventoryManager.cpp  InventoryManager.hpp  InventoryParser.cpp  InventoryParser.hpp  InventoryParserHelper.cpp  InventoryParserHelper.hpp  Makefile.am  ScheduleParser.cpp  ScheduleParser.hpp  ScheduleParserHelper.cpp  ScheduleParserHelper.hpp  sources.mk
airinv/config/: Makefile.am  ax_mysql.m4  soci.m4
airinv/doc/: Makefile.am  doxygen_html.cfg.in
airinv/doc/local/: authors.doc  index.doc.in  sources.mk
airinv/doc/sourceforge/: howto_release_airinv.html.in
airinv/factory/: FacAirinvServiceContext.hpp  Makefile.am
airinv/server/: AirInvClient.cpp  AirInvServer.cpp  AirInvServer.hpp  BomPropertyTree.cpp  BomPropertyTree.hpp  Makefile.am
airinv/service/: AIRINV_Master_Service.cpp  AIRINV_Master_ServiceContext.cpp  AIRINV_Master_ServiceContext.hpp  AIRINV_Service.cpp  AIRINV_ServiceContext.cpp  AIRINV_ServiceContext.hpp  sources.mk
airinv/test/: Makefile.am  sell.cpp
airinv/test/airinv/: Makefile.am  sell.cpp
airinv/ui/browser/: .gitignore  airinv.html  airinvslick.html  config.js  datatables.html  import.html  index.html  launcher.html  nextevent.html  schedule.html  test.html  travelsolutions.html
airinv/ui/cmdline/: Makefile.am  airinv.cpp  sources.mk
api/: handlers.py  urls.py
appserver/django/: README  airinvClient.py  airinvDjangoClient.py
appserver/django/airinv/: settings.py  urls.py
appserver/django/setup/: addProxyForDjangoAirinvApp.sh
config/: project_config_embeddable.cmake
doc/: CMakeLists.txt  Makefile.am
doc/images/: airinv_dependencies.ditaa  airinv_icon.ppm
doc/local/: airinv_footer.html  airinv_header.html  help_wanted.doc  howto_release.doc  index.doc  installation.doc  linking.doc  users_guide.doc
doc/tutorial/: Makefile.am  tutorial.doc
man/: AirInvClient.doc  AirInvServer.doc  CMakeLists.txt  Makefile.am  airinv-config.doc  airinv-library.doc  airinv.doc  airinv_parseInventory.doc  doxygen_man1.cfg.in  doxygen_man3.cfg.in
rmol/: RMOL_Types.hpp
samples/: Makefile.am
test/: Makefile.am
test/airinv/: CMakeLists.txt  InventoryTestSuite.cpp  Makefile.am  sources.mk
test/airrac/: YieldTestSuite.cpp
test/rmol/: bomsforforecaster.cpp
(+37 files in other folders)
